--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Rock Paper Scissors Game!</title>
   </head>
-  <body class="bg-[url(/img/bgPaper.jpg)] bg-top bg-cover">
+  <body class="bg-[url(img/bgPaper.jpg)] bg-top bg-cover">
     <container class="flex flex-col items-center mx-auto gap-16">
       <h1 class="text-[2rem]">Rock Paper Scissors</h1>
       <h3 id="result" class="text-[3rem]"></h3>
